# abc.eth

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md
include/abc/eth1/rlp/: element_type.h
include/abc/eth1/rlp/details/: element_type.h  encode.h
include/abc/ethereum/: error.h
include/abc/ethereum/constants/: hashes.h
include/abc/ethereum/crypto/: config.h  ecdsa.h  error.h  fixed_hash.h  keccak.h  secp256k1.h  utilities.h
include/abc/ethereum/eth1/types/: address.h
include/abc/ethereum/rlp/: codec_operator.h  codec_operator_decl.h  concepts.h  error.h  object.h  object_decl.h  object_fwd.h  object_fwd_decl.h  object_type.h  pack.h  pack_decl.h  pack_fwd_decl.h  parse_result.h  raw.h  raw_decl.h  raw_fwd_decl.h  sbuffer.h  sbuffer_fwd_decl.h  serde.h  serde_decl.h  serde_fwd_decl.h  simple_buffer.h  simple_buffer_decl.h  simple_buffer_fwd_decl.h  sysdep.h  type_traits.h  unpack.h  unpack_decl.h
include/abc/ethereum/rlp/adaptor/: adaptor.h  adaptor_base.h  adaptor_base_decl.h  adaptor_base_fwd_decl.h  address.h  as.h  as_fwd_decl.h  unsigned_integral.h
include/abc/ethereum/rlp/adaptor/abc/: bytes.h  bytes_view.h  fixed_bytes.h  uint128.h
include/abc/ethereum/rlp/adaptor/cpp/: array.h  optional.h  shared_ptr.h
include/abc/ethereum/rlp/adaptor/eth1/: header.h
include/abc/ethereum/rlp/zone/: allocator.h  arena.h  arena_decl.h  arena_fwd_decl.h  constructor.h
include/abc/ethereum/state/: merkle_patricia_trie_decl.h
include/abc/ethereum/trie/: byte_value.h  byte_value_decl.h  byte_value_fwd_decl.h  byte_value_type.h  byte_value_type_decl.h  byte_value_type_fwd_decl.h  compact_bytes.h  compact_bytes_decl.h  compact_bytes_fwd_decl.h  compact_bytes_view.h  compact_bytes_view_decl.h  compact_bytes_view_fwd_decl.h  compact_flag.h  compact_flag_decl.h  compact_flag_fwd_decl.h  concepts.h  database_reader.h  database_reader_decl.h  database_reader_fwd_decl.h  encoding.h  error.h  full_node.h  full_node_decl.h  full_node_fwd_decl.h  hash_flag.h  hash_flag_decl.h  hash_flag_fwd_decl.h  hash_node.h  hash_node_decl.h  hash_node_fwd_decl.h  merkle_patricia_trie.h  merkle_patricia_trie_decl.h  merkle_patricia_trie_fwd_decl.h  nibble_bytes.h  nibble_bytes_decl.h  nibble_bytes_fwd_decl.h  nibble_bytes_view.h  nibble_bytes_view_decl.h  nibble_bytes_view_fwd_decl.h  node_decode.h  (+20 more)
include/abc/ethereum/trie/rlp/: full_node.h  full_node_decl.h  full_node_fwd_decl.h  node_decode.h  short_node.h  short_node_decl.h  short_node_fwd_decl.h
include/abc/ethereum/trie/triedb/: database_reader.h  database_reader_decl.h  database_reader_fwd_decl.h
include/abc/ethereum/trie/triedb/hashdb/: database.h  database_decl.h  database_fwd_decl.h  database_reader.h  database_reader_decl.h  database_reader_fwd_decl.h
include/abc/ethereum/types/: address.h  address_decl.h  address_fwd_decl.h  bytes.h  converters.h  error.h
include/abc/ethereum/types/eth1/: header.h  header_decl.h  header_fwd_decl.h
include/abc/ethereum/types/rlp/: address.h  address_decl.h  address_fwd_decl.h
include/abc/ethereum/types/rlp/eth1/: header.h  header_decl.h  header_fwd_decl.h
rlp/: cpp_version.h  object_fwd_decl.h  versioning.h
rlp/v1/: object_fwd.h  object_fwd_decl.h
src/: CMakeLists.txt  address.cpp  allocator.cpp  dummy.cpp  ecdsa.cpp  error.cpp  eth1_header.cpp  ethereum_error.cpp  rlp_error.cpp  rlp_unpack.cpp  sbuffer.cpp  secp256k1.cpp  unpack.cpp  utilities.cpp
src/crypto/: CMakeLists.txt  error.cpp  secp256k1.cpp
src/rlp/: CMakeLists.txt  error.cpp  object.cpp  raw.cpp  sbuffer.cpp  simple_buffer.cpp  unpack.cpp
src/rlp/zone/: allocator.cpp
src/trie/: CMakeLists.txt  encoding.cpp  error.cpp  full_node.cpp  hash_node.cpp  merkle_patricia_trie.cpp  nibble_bytes.cpp  nibble_bytes_view.cpp  node_decode.cpp  node_face.cpp  node_utility.cpp  short_node.cpp  trie_hasher.cpp  trie_reader.cpp  value_node.cpp
src/trie/rlp/: full_node.cpp  node_decode.cpp
src/types/: CMakeLists.txt  address.cpp  error.cpp
src/types/rlp/: address.cpp
src/types/rlp/eth1/: header.cpp
tests/: CMakeLists.txt  address.cpp  allocator.cpp  arena.cpp  keccak.cpp  pack.cpp  pubkey.cpp  rlp.cpp  secp256k1.cpp  unpack.cpp
tests/rlp/: pack.cpp  raw.cpp  unpack.cpp
tests/trie/: compact_bytes.cpp  full_node_data.h  full_node_wrong_nested_full_node.h  full_node_wrong_size.h  nested_full_node_data.h  nibble_bytes.cpp  node_decode.cpp
